--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,24 @@
 name: einblicke_frame
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.0
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
+  go_router: ^13.2.4
+  intl: ^0.18.1
+  flutter_localizations:
+    sdk: flutter
+  einblicke_shared:
+    path: ../einblicke_shared/
+  einblicke_shared_clients:
+    path: ../einblicke_shared_clients/
+  get_it: ^7.6.4
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +27,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
