--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   go_router: ^13.2.4
-  intl: ^0.18.1
+  intl: ^0.19.0
   flutter_localizations:
     sdk: flutter
   einblicke_shared:
@@ -19,6 +19,8 @@ dependencies:
   einblicke_shared_clients:
     path: ../einblicke_shared_clients/
   get_it: ^7.6.4
+  dartz: ^0.10.1
+  mocktail: ^1.0.3
 
 dev_dependencies:
   flutter_test:
