--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   dartz: ^0.10.1
   mocktail: ^1.0.3
   dio: ^5.4.0
+  equatable: ^2.0.5
+  web_socket_client: ^0.1.4
 
 dev_dependencies:
   flutter_test:
